[package]
name = "task-group"
version = "0.2.1"
authors = ["Pat Hickey <pat@moreproductive.org>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/pchickey/task-group"
description = "manage groups of tokio tasks"
keywords = ["tokio", "async"]
readme = "README.md"
edition = "2018"

[dependencies]
async-channel = "1.6.1"
futures-core = "0.3.17"
async-std =  { version = "1.10.0", features = ["unstable"] }
async-global-executor = "2.0.2"

[dev-dependencies]
anyhow = "1"
tokio = { version = "^1.2.0", features = ["full", "rt"] }
async-std = { version = "1.10.0", features = ["unstable", "attributes"] }
