[package]
name = "async-task-group"
version = "0.2.1"
authors = ["Pat Hickey <pat@moreproductive.org>", "Yoshua Wuyts <yoshuawuyts@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/yoshuawuyts/async-task-group"
description = "Manage groups of `async-std` tasks as a single unit."
keywords = ["async_std", "async", "futures", "task", "spawn"]
readme = "README.md"
edition = "2018"

[dependencies]
async-std =  { version = "1.10.0", features = ["unstable"] }

[dev-dependencies]
async-std = { version = "1.10.0", features = ["unstable", "attributes"] }
anyhow = "1.0.44"
